updated sekret